--- a/css/slider.css
+++ b/css/slider.css
@@ -14,10 +14,7 @@ html {
 }
 
 body {
-  font-size: 1.6rem;
-  font-family: "Open Sans", sans-serif;
-  color: #2c343b;
-  background-color: #f2f2f2;
+
 }
 
 a {
@@ -149,6 +146,7 @@ Slider
   position: relative;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  margin-bottom: 60px;
 }
 
 .cd-hero-slider {
@@ -315,7 +313,7 @@ Single slide style
   display: inline-block;
   padding: 1.2em 1.4em;
   margin-top: .8em;
-  background-color: rgba(212, 68, 87, 0.9);
+  background-color: rgba(26, 188, 156, 0.6);
   font-size: 1.3rem;
   font-weight: 700;
   letter-spacing: 1px;
@@ -333,10 +331,10 @@ Single slide style
   margin-left: 1em;
 }
 .no-touch .cd-hero-slider .cd-btn:hover {
-  background-color: #d44457;
+  background-color: #16a085;
 }
 .no-touch .cd-hero-slider .cd-btn.secondary:hover {
-  background-color: #161a1e;
+  background-color: #d44457;
 }
 @media only screen and (min-width: 768px) {
   .cd-hero-slider li:nth-of-type(2) {
@@ -510,7 +508,7 @@ Slider navigation
 .cd-slider-nav {
   position: absolute;
   width: 100%;
-  bottom: 0;
+  bottom: 10px;
   z-index: 2;
   text-align: center;
   height: 55px;
@@ -524,12 +522,10 @@ Slider navigation
   position: relative;
 }
 .cd-slider-nav .cd-marker {
-  position: absolute;
-  bottom: 0;
-  left: 0;
+
   width: 60px;
   height: 100%;
-  color: #d44457;
+  color: ##1abc9c;
   background-color: #ffffff;
   box-shadow: inset 0 2px 0 currentColor;
   -webkit-transition: -webkit-transform 0.2s, box-shadow 0.2s;
@@ -575,7 +571,7 @@ Slider navigation
   float: left;
 }
 .cd-slider-nav li.selected a {
-  color: #2c343b;
+  color: #16a085;
 }
 .no-touch .cd-slider-nav li.selected a:hover {
   background-color: transparent;
