--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,18 @@
-@font-face {
+/*@font-face {
 font-family: "UTM-Avo";
 src: url(‘font/UTM Avo.ttf’);
+font-weight: normal;
+font-style: normal;
+}*/
+@font-face {
+font-family: "Roboto";
+src: url('fonts/Roboto.ttf');
 font-weight: normal;
 font-style: normal;
 }
 
 html, body {
-	font-family:'UTM-Avo', Tahoma, Arial !important;
+	font-family:'Roboto', Tahoma, Arial !important;
 	font-size: 12px;
 	margin: auto;
 	height: 100%;
@@ -26,7 +32,7 @@ img {
 }
 
 #main-content {
-	overflow: hidden;
+
 	background-color: #fff;
 
 }
@@ -170,7 +176,7 @@ transform: rotate(4deg) scale(1) skew(0deg) translate(0px);
   text-align: left;
   width: 36%;
 }
-.bottom-content-article .info-bar{
+.bottom-content-article .info-bar, .blog-article .info-bar{
 	border:1px solid #ccc;
 	  clear: both;
   margin-top: 10px;
@@ -295,8 +301,16 @@ transform: rotate(4deg) scale(1) skew(0deg) translate(0px);
   color: #F8F8F8;
 }
 }
+
+
 .footer address{
 	margin-bottom: 10px;
 }
-
+/*------------------------------BLOG-----------------------*/
+#breadcrum{
+	  border-bottom: 1px solid #EAEAEA;
+  padding: 20px 0;
+  box-shadow: 0 0 30px rgba(0, 0, 0, 0.05) inset;
+  background-color: rgb(249, 249, 249);
+}
 
